@@ -1,4 +1,4 @@
-$NetBSD$
+$NetBSD: distinfo,v 1.1.1.1 2002/03/24 20:14:37 wiz Exp $
 
-SHA1 (SDL_gfx-2.0.3.tar.gz) = 5112813e179146f3fb09194d7db2d9fdbf0c4314
-Size (SDL_gfx-2.0.3.tar.gz) = 507419 bytes
+SHA1 (SDL_gfx-2.0.10.tar.gz) = 63a0622b1747563c149f4d588eae517e22e936bb
+Size (SDL_gfx-2.0.10.tar.gz) = 530735 bytes
