@@ -121,7 +121,6 @@ Suggested package updates
 
 	o ImageViewer-0.6.3
 	o SDL-1.2.7
-	o SDL_gfx-2.0.10
 	o TeXmacs-1.0.3.3
 	o Xaw3d-1.5E
 	o Xbae-4.50.0
